--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
             await cheerpjInit();
             // 3. Tenta carregar o JAR de 39KB
             // Certifique-se que o nome no GitHub é exatamente HongKong.jar
-            await cheerpjRunJar("/app/HongKong.jar");
+            await cheerpjRunJar("HongKong.jar");
         };
     </script>
 </body>
 </html>
+
